[GOHW-8]: Добавлен метод запроса всех заказов в loms
