# loms/internal/controllers/grpc/converter/ordersinfo.go
@@ -1,0 +1,18 @@
+package converter
+
+import (
+	"github.com/samber/lo"
+	"route256.ozon.ru/project/loms/internal/models"
+	v1 "route256.ozon.ru/project/loms/internal/pkg/api/loms/v1"
+)
+
+func OrdersAllOrdersInfoResponse(orders []*models.Order) *v1.AllOrdersInfoResponse {
+	dtoOrders := &v1.AllOrdersInfoResponse{}
+	dtoOrders.OrdersInfo = lo.Map(orders, func(item *models.Order, _ int) *v1.OrderInfoWithID {
+		orderInfoWithID := &v1.OrderInfoWithID{}
+		orderInfoWithID.Id = IDToOrderID(item.Id())
+		orderInfoWithID.OrdersInfo = OrderToOrderInfoResponse(item)
+		return orderInfoWithID
+	})
+	return dtoOrders
+}
